--- a/kubespray/inventory/inventory.ini
+++ b/kubespray/inventory/inventory.ini
@@ -2,8 +2,8 @@
 master1 ansible_host=10.0.1.11 ip=10.0.1.11 etcd_member_name=master1
 master2 ansible_host=10.0.1.12 ip=10.0.1.12 etcd_member_name=master2
 master3 ansible_host=10.0.1.13 ip=10.0.1.13 etcd_member_name=master3
-node1 ansible_host=10.0.1.14
-node2 ansible_host=10.0.1.15
+node1 ansible_host=10.0.1.14 ip=10.0.1.14
+node2 ansible_host=10.0.1.15 ip=10.0.1.15
 
 [all:vars]
 ansible_port=22
