--- a/kubespray/Vagrantfile
+++ b/kubespray/Vagrantfile
@@ -4,21 +4,22 @@ IP_START=10
 UBUNTU_VERSION="20.04"
 
 Vagrant.configure("2") do |config|
-  config.vm.provision "shell", env: {"IP_NW" => IP_NW, "IP_START" => IP_START}, inline: <<-SHELL
+  config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/id_rsa.pub"
+  config.vm.provision "shell", env: {"IP_NW" => IP_NW, "IP_START" => IP_START, "NUM_WORKER_NODES" => NUM_WORKER_NODES}, inline: <<-SHELL
       apt-get update -y
-      echo "$IP_NW$((IP_START+1)) master1" >> /etc/hosts
-      echo "$IP_NW$((IP_START+2)) master2" >> /etc/hosts
-      echo "$IP_NW$((IP_START+3)) master3" >> /etc/hosts
-      echo "$IP_NW$((IP_START+4)) node1" >> /etc/hosts
-      echo "$IP_NW$((IP_START+5)) node2" >> /etc/hosts
+      for i in {1..3}
+      do
+        echo "$IP_NW$((IP_START+$i)) master$i" >> /etc/hosts
+      done
+      for (( j=1; j<=$NUM_WORKER_NODES; j++ ))
+      do
+        echo "$IP_NW$((IP_START+$i+$j)) node$j" >> /etc/hosts
+      done
+      cat /home/vagrant/.ssh/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
   SHELL
 
   config.vm.box = "bento/ubuntu-" + "#{UBUNTU_VERSION}"
   config.vm.box_check_update = true
-  config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/id_rsa.pub"
-  config.vm.provision "shell", inline: <<-SHELL
-    cat /home/vagrant/.ssh/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
-  SHELL
   (1..3).each do |i|
   config.vm.define "master#{i}" do |master|
     master.vm.hostname = "master#{i}"
