--- a/kubespray/inventory/group_vars/k8s_cluster/k8s-cluster.yml
+++ b/kubespray/inventory/group_vars/k8s_cluster/k8s-cluster.yml
@@ -157,7 +157,7 @@ kube_encrypt_secret_data: false
 
 # DNS configuration.
 # Kubernetes cluster name, also will be used as DNS domain
-cluster_name: luxv2.kube
+cluster_name: cluster.local
 # Subdomains of DNS domain to be resolved via /etc/resolv.conf for hostnet pods
 ndots: 2
 # Can be coredns, coredns_dual, manual or none
